fix: solve cryptosection mobile and ultra wide bug

--- a/src/sections/cryptocoin/crypto.module.css
+++ b/src/sections/cryptocoin/crypto.module.css
@@ -1,4 +1,11 @@
 .cryptoSection {
+  --title-text-size: var(--text-h2-normal);
+  --text-max-w: 600px;
+  --container-margin-r: 0;
+  --banner-img-display: none;
+  --padding-inline: 2.2vw;
+  --text-al: center;
+
   overflow: hidden;
   background: var(--color-black-200);
   background: var(--color-gradient-dark);
@@ -12,6 +19,8 @@
   justify-content: center;
   padding: 90px 0px;
   position: relative;
+  max-width: 1900px;
+  margin-inline: auto;
 
   &::after {
     content: " ";
@@ -21,9 +30,11 @@
     background-size: 600px;
     background-position: 80%;
     width: 100%;
+    max-width: 1848px;
     height: 100%;
     mask-image: linear-gradient(var(--color-black-200) 70%, transparent 100%);
     z-index: 1;
+    display: var(--banner-img-display);
   }
 }
 
@@ -32,12 +43,12 @@
   flex-direction: column;
   flex-wrap: wrap;
   gap: 2em;
-  margin-right: 40%;
+  margin-right: var(--container-margin-r);
   position: relative;
   z-index: 2;
 
   h2 {
-    font-size: var(--text-h1-normal);
+    font-size: var(--title-text-size);
     margin: 0;
     font-weight: 400;
     max-width: 475px;
@@ -50,18 +61,32 @@
   gap: 1rem;
   display: flex;
   justify-content: center;
+  padding-inline: var(--padding-inline);
 
   div {
-    align-items: flex-start;
-    gap: 20px;
     display: flex;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
+    row-gap: 1rem;
+
+    h2 {
+      grid-area: 1 / 1 / 2 / 5;
+    }
+
+    img {
+      grid-area: 2 / 1 / 3 / 3;
+    }
+    p {
+      grid-area: 2 / 3 / 3 / 5;
+    }
   }
 
   p {
-    max-width: 410px;
+    max-width: var(--text-max-w);
     margin: 0;
     line-height: 30px;
+    text-align: var(--text-al);
 
     b {
       span {
@@ -78,32 +103,37 @@
   max-width: 100%;
 }
 
-@media screen and (max-width: 820px) {
+@media only screen and (min-width: 1080px) {
   .cryptoSection {
-    height: 700px;
-    padding-bottom: 0;
+    --h2-text-size: var(--text-h1-normal);
+    --text-max-w: 410px;
+    --container-margin-r: 40%;
+    --banner-img-display: block;
+    --padding-inline: 0;
+    --text-al: left;
   }
-  .wrapper {
-    height: 100%;
-    background-size: 90%;
-    background-position: bottom;
-    margin: 0%;
-  }
-  .container {
-    justify-content: center;
-    text-align: center;
-    padding: 0px 2vw;
-    margin-bottom: 100% !important;
-    margin: auto;
-  }
-  .containerContent {
-    flex-direction: column;
-    align-items: center;
+  .containerContent div {
+    grid-template-rows: repeat(2, auto);
+    grid-template-columns: repeat(4, auto);
+    display: grid;
+    row-gap: 1.5rem;
+    column-gap: 2rem;
+
+    h2 {
+      grid-area: 1 / 1 / 2 / 5;
+    }
+
+    img {
+      grid-area: 2 / 1 / 3 / 3;
+    }
+    p {
+      grid-area: 2 / 3 / 3 / 5;
+    }
   }
 }
 
-@media screen and (max-width: 650px) {
-  .wrapper {
-    background-image: url("/images/coin-web-mobile.png");
+@media only screen and (max-width: 1300px) {
+  .wrapper::after {
+    right: -100px;
   }
 }
